css/style.css
/* ... */
.btn {
  display: grid;
  place-items: center;
}

/*--------
Index
----------*/
.introduction {
  min-height: 100vh;
  width: 100%;
  place-items: center;
  position: sticky;
  top: 0;
  background-color: black;
}

.introduction-content {
  grid-column: 2 / span 8;
}

.introduction-text {
  font-size: 2.8rem;
  text-align: justify;
  text-align-last: center;
}

.one {
  background-image: url('../assets/img/home/2bitmap.webp');
  background-size: cover;
}

.two {
  background-image: url('../assets/img/home/1bitmap.webp');
  background-size: cover;
}

.go-to-rabbit {
  cursor: pointer;
  display: grid;
  grid-column: 2 / span 4;
  grid-template-areas: "overlap";
  border: 1px solid white;
  width: 85%;
  aspect-ratio: 1;
  font-size: 2.8rem;
}

.keywords {
  width: 100%;
  height: 100%;
  grid-area: overlap;
  z-index: 1;
  display: none;
}

.rabbit {
  display: grid;
  grid-area: overlap;
  text-align: center;
  place-items: center;
}

.go-to-rabbit:hover .keywords {
  display: grid;
}

.keyword {
  display: grid;
  border-bottom: 1px solid white;
  background-color: black;
  justify-content: center;
  place-items: center;
}

.keyword:hover {
  font-family: 'Redaction 50', serif;
}

.go-to-archive {
  cursor: pointer;
  display: grid;
  text-align: center;
  place-items: center;
  grid-column: 6 / span 4;
  border: 1px solid white;
  width: 85%;
  aspect-ratio: 1;
  font-size: 2.8rem;
}

.go-to-archive:hover {
  font-family: 'Redaction 50', serif;
}

/*--Tooltip--*/
.tooltip {
  position: relative;
  z-index: 10;
}

.tooltip:before,
.tooltip:after {
  display: block;
  opacity: 0;
  pointer-events: none;
  position: absolute;
}

.tooltip:before {
  background: white;
  border: 1px solid black;
  color: black;
  content: attr(data-title);
  font-size: 1.5rem;
  max-width: 40vw;
  padding: 30px;
}

.tooltip.fade:after,
.tooltip.fade:before {
  transform: translate3d(0, -10px, 0);
  transition: all .15s ease-in-out;
}

.tooltip.fade:hover:after,
.tooltip.fade:hover:before {
  opacity: 1;
  transform: translate3d(0, 0, 0);
}

/*--------
Keywords
----------*/
.title {
  min-height: 50vh;
  width: 100%;
  place-items: center;
  grid-column: 2 / span 8;
  font-size: 5rem;
  text-align: justify;
  text-align-last: center;
}

.title-content {
  grid-column: 2 / span 8;
  text-align: justify;
  text-align-last: center;
  font-size: 5rem;
}
.title-content p{
  margin-bottom: 0;
}

.subtitle {
  font-size: 2.3rem;
  text-align: justify;
  text-align-last: center;
}

.selector {
  height: 60vh;
  width: 100%;
}

.selector-container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 1.5rem;
  text-align: center;
  align-items: center;
  margin-left: 10%;
  margin-right: 10%;
}

.selector-btn {
  font-size: 2.8rem;
  padding: 30px;
  border: 1px solid white;
}

.archive-svg {
  grid-column: 1/span 3;
  height: 70vh;
  border: 1px solid white;
  justify-self: center;
  width: 70%;
  background-color: black;
  background-image: url('/assets/img/masks/exploremoremasks.jpg');
  z-index: 50;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

/*- Video--*/
#container {
  display: grid;
  grid-template-areas: "overlap";
  width: 100%;
}

.video-grid {
  display: grid;
  grid-template-columns: repeat(10, 1fr);
  grid-template-rows: auto;
  grid-auto-rows: min-content;
  grid-gap: 2rem;
  grid-area: overlap;
  width: 100%;
  z-index: 5;
}

.videos-container {
  overflow-y: hidden;
  overflow-x: hidden;
  padding-bottom: 3px;
  padding-top: 3px;
}

#canvasLines {
  display: grid;
  grid-area: overlap;
}

.wrapper {
  height: fit-content;
  z-index: 2;
  padding-bottom:-5px;
}
.wrapper:hover {
  background-color: black;
  z-index: 10;
  outline: 1px solid white;
}

.wrapper p{
  padding-left: 1vmax;
  padding-right: 1vmax;
  opacity: 0;
  font-family: 'GT America', sans-serif;
  font-size: 1.5rem;
  font-family: 'GT America';
}

.wrapper:hover > p{
  opacity: 1;
}

.wrapper video {
  width: 100% !important;
  height: auto !important;
  display: block;
  outline:1px solid white;
  justify-self: center;
  align-self: start;
}

.wrapper:hover video {
  outline:none;
  width: 100% !important;
  height: auto !important;
  display: block;
  outline:1px solid white;
  justify-self: center;
  align-self: start;
}

.wrapper > video::-webkit-media-controls {
  display: none;
}

.quote {
  font-size: 2rem;
  padding: 25px;
  border: 1px solid white;
  background-color: black;
  text-align: center;
}

.quote p {
  margin: 0;
}

#wrapper-vid1 {
  grid-column: 4 / span 4;
  grid-row: 1;
  justify-self: center;
  align-self: start;
}

#wrapper-vid2 {
  grid-column: 3 / span 2;
  grid-row: 2;
  justify-self: center;
  align-self: start;
}

#mask-quote-1 {
  grid-column: 4 / span 4;
  grid-row: 2;
  justify-self: end;
  align-self: end;
  margin-bottom: 20%;
  z-index: 6;
}
#wrapper-vid3 {
  grid-column: 7 / span 2;
  grid-row: 2;
  justify-self: center;
  align-self: end;
}

#description-mask-1 {
  grid-column: 2 / span 8;
  grid-row: 3;
  justify-self: center;
  align-self: center;
  font-size: 2.8rem;
  text-align: justify;
  text-align-last: center;
}

#wrapper-vid4 {
  grid-column: 3 / span 3;
  grid-row: 4;
  justify-self: center;
  align-self: start;
}

#mask-quote-2 {
  grid-column: 6 / span 3;
  grid-row: 5;
  justify-self: end;
  align-self: center;
  margin-bottom: 80%;
  z-index: 6;
}
#wrapper-vid5 {
  grid-column: 8 / span 2;
  grid-row: 5;
  justify-self: center;
  align-self: start;
  margin-bottom: 70%;
}

#wrapper-vid6 {
  grid-column: 2 / span 4;
  grid-row: 5;
  justify-self: center;
  align-self: end;
}

#mask-quote-3 {
  grid-column: 2 / span 3;
  grid-row: 6;
  justify-self: center;
  align-self: center;
  z-index: 6;
}
#wrapper-vid7 {
  grid-column: 6 / span 4;
  grid-row: 6;
  justify-self: center;
  align-self: center;
}

#mask-quote-4 {
  grid-column: 8 / span 3;
  grid-row: 7;
  justify-self: center;
  align-self: start;
  z-index: 6;
}
/* ... */

